# clip_proj

./: .gitignore  UR5e Documentation(1).docx  diagnose_external_control.py  diagnose_ur_network.sh  frames_2025-09-17_11.20.11.gv  get_coordinates.py  get_multi_coordinates.py  get_multi_coordinates_withclip.py  get_pos.py  get_pos_tf.py  ik_test.py  launch_ur_robot.sh  readme.md  reset_gripper.py  rotate_gripper.py  seta.json  setb.json  setc.json  setd.json  setd_corrected.json  sete.json  setf.json  setg.json  seth.json  seti.json  setup_ur_network.sh  setup_ur_network_simple.sh  setz.json  test_external_control_fix.py  ur5e_position_monitor.py  waypoint_cartesian.py  waypoint_controller.py  waypoint_controller.py.backup  waypoint_moveit_blend.py  waypoint_multi.py  waypoint_multi_clip.py  waypoint_service_moveit.py  waypoint_ui.py
lebai_gripper_ros/: package.xml  setup.cfg  setup.py
lebai_gripper_ros/install/: local_setup.sh  setup.sh
lebai_gripper_ros/install/lebai_gripper_ros/share/lebai_gripper_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
lebai_gripper_ros/install/lebai_gripper_ros/share/lebai_gripper_ros/launch/: lebai_gripper.launch.py
lebai_gripper_ros/launch/: lebai_gripper.launch.py
lebai_gripper_ros/lebai_gripper_ros/: lebai_gripper_node.py
lebai_gripper_ros/log/: latest_build
